k8s/kairos/kairos.namespace.yaml
{
  "kind": "Namespace",
  "apiVersion": "v1",
  "metadata": {
    "name": "kairos",
    "labels": {
      "name": "kairos"
    }
  }
}
