k8s/kairos/kairos.redis.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: kairos
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      run: redis
  template:
    metadata:
      labels:
        run: redis
    spec:
      volumes:
        - name: redis-pv
          persistentVolumeClaim:
            claimName: redis-pv-claim
            
      containers:
        - name: redis
          image: eqalpha/keydb:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
          volumeMounts:
            - mountPath: /data
              name: redis-pv
              subPath: data
