k8s/kairos/kairos.web-app.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  namespace: kairos
spec:
  replicas: 1
  selector:
    matchLabels:
      run: web-app
  template:
    metadata:
      labels:
        run: web-app
    spec:
      containers:
        - name: web-app
          image: %REGISTRY/kairos/web.app:%VERSION
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: regcred
