k8s/kairos/kairos.event-store.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-store
  namespace: kairos
  labels:
    run: event-store
spec:
  type: NodePort
  ports:
  - name: por1
    port: 1113
  - name: port2
    port: 2113
  selector:
   run: event-store
