k8s/kairos/kairos.redis.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: kairos
  labels:
    app: redis
spec:
  type: NodePort
  ports:
   - port: 6379
  selector:
   app: redis
