k8s/kairos/kairos.web-api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-api
  namespace: kairos
  labels:
    run: web-api
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
  selector:
    run: web-api
