k8s/kairos/kairos.web-app.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app
  namespace: kairos
  labels:
    run: web-app
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
  selector:
    run: web-app
