k8s/kairos/letsencrypt.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: letsencrypt
  namespace: kairos
spec:
  selector:
    app: letsencrypt
  ports:
  - protocol: "TCP"
    port: 80
