k8s/kairos/kairos.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: kairos
  annotations:
    kubernetes.io/ingress.class: "nginx"

spec:
  tls:
    - hosts:
        - kairos.rocks
      secretName: kairos-tls
  rules:
    - host: kairos.rocks
      http:
        paths:
          - path: /graphql
            backend:
              serviceName: web-api
              servicePort: 80          
          - path: /api
            backend:
              serviceName: web-api
              servicePort: 80
          - path: /
            backend:
              serviceName: web-app
              servicePort: 80
          - path: /.well-known/acme-challenge/
            backend:
              serviceName: letsencrypt
              servicePort: 80
